project(CS1-codility VERSION 1.0)

# add_executable(${PROJECT_NAME} ./main.cpp ./*.cpp)

add_executable(${PROJECT_NAME}_RUN ./run.cpp)
add_executable(${PROJECT_NAME}_1-1 ./1-1.cpp)
add_executable(${PROJECT_NAME}_2-1 ./2-1.cpp)
add_executable(${PROJECT_NAME}_2-2 ./2-2.cpp)
add_executable(${PROJECT_NAME}_3-1 ./3-1.cpp)
add_executable(${PROJECT_NAME}_3-2 ./3-2.cpp)
add_executable(${PROJECT_NAME}_3-3 ./3-3.cpp)